--- a/No1.todolist/index.html
+++ b/No1.todolist/index.html
@@ -126,7 +126,7 @@
                 <a class="check-btn">
                   <i class="far fa-circle"></i>
                 </a>
-                <a class="card-link closeCard" data-toggle="collapse" href="#collapse_001">Art class</a>
+<a class="card-link closeCard" data-toggle="collapse" href="#collapse_001">Meeting</a>
                 <a class="star-btn">
                   <i class="far fa-star"></i>
                 </a>
@@ -153,7 +153,7 @@
                 <a class="check-btn">
                   <i class="far fa-circle"></i>
                 </a>
-                <a class="card-link closeCard" data-toggle="collapse" href="#collapse_002">UI class</a>
+                <a class="card-link closeCard" data-toggle="collapse" href="#collapse_002">DailyUI</a>
                 <a class="star-btn">
                   <i class="far fa-star"></i>
                 </a>
@@ -178,7 +178,7 @@
                 <a class="check-btn">
                   <i class="far fa-circle"></i>
                 </a>
-                <a class="card-link closeCard" data-toggle="collapse" href="#collapse_003">Englisg class</a>
+<a class="card-link closeCard" data-toggle="collapse" href="#collapse_003">Buy ticket</a>
                 <a class="star-btn">
                   <i class="far fa-star"></i>
                 </a>
