過濾版型完成

--- a/No2.filter/index.html
+++ b/No2.filter/index.html
@@ -20,9 +20,17 @@
   <!-- Bootstrap CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
 
+  <!-- datepicker -->
+  <script src="js/gijgo.min.js" type="text/javascript"></script>
+  <link href="css/gijgo.css" rel="stylesheet" type="text/css" />
+
   <!-- fontawesome -->
   <script src="js/fontawesome-all.js"></script>
   <link rel="stylesheet" href="css/fontawesome-all.css">
+
+  <!-- font -->
+  <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:500" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
 
@@ -35,36 +43,23 @@
   <div id="wrap" class="d-flex justify-content-center">
     <div class="col-sm-11 col-md-10">
       <div id="header">
-        <h1>HOTEL</h1>
+        <h1>EG's HOTEL</h1>
       </div>
 
       <div id="main">
         <div id="windows" class="col-12">
+
           <div id="content" class="content-normal">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio esse iste aliquid, minima possimus dolores! Facilis
-              aliquid voluptas impedit dignissimos corporis nostrum, ab mollitia nesciunt delectus, tempore dolorum ut? Aspernatur
-              eius impedit accusamus, repellendus corrupti tempora fuga mollitia, quod quos totam asperiores odio atque recusandae
-              unde autem at. Similique nulla itaque mollitia quaerat corporis corrupti possimus aliquam? Magnam ullam error
-              culpa voluptas explicabo. Nostrum laudantium magni neque quo ea est eos ratione velit nemo voluptatem fuga
-              eveniet pariatur, officia nesciunt et, impedit omnis inventore, ullam dicta perspiciatis repudiandae nulla
-              cum vel. Modi velit illo minus soluta itaque deleniti ab fuga?
-            </p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio esse iste aliquid, minima possimus dolores! Facilis
-              aliquid voluptas impedit dignissimos corporis nostrum, ab mollitia nesciunt delectus, tempore dolorum ut? Aspernatur
-              eius impedit accusamus, repellendus corrupti tempora fuga mollitia, quod quos totam asperiores odio atque recusandae
-              unde autem at. Similique nulla itaque mollitia quaerat corporis corrupti possimus aliquam? Magnam ullam error
-              culpa voluptas explicabo. Nostrum laudantium magni neque quo ea est eos ratione velit nemo voluptatem fuga
-              eveniet pariatur, officia nesciunt et, impedit omnis inventore, ullam dicta perspiciatis repudiandae nulla
-              cum vel. Modi velit illo minus soluta itaque deleniti ab fuga?
-            </p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio esse iste aliquid, minima possimus dolores! Facilis
-              aliquid voluptas impedit dignissimos corporis nostrum, ab mollitia nesciunt delectus, tempore dolorum ut? Aspernatur
-              eius impedit accusamus, repellendus corrupti tempora fuga mollitia, quod quos totam asperiores odio atque recusandae
-              unde autem at. Similique nulla itaque mollitia quaerat corporis corrupti possimus aliquam? Magnam ullam error
-              culpa voluptas explicabo. Nostrum laudantium magni neque quo ea est eos ratione velit nemo voluptatem fuga
-              eveniet pariatur, officia nesciunt et, impedit omnis inventore, ullam dicta perspiciatis repudiandae nulla
-              cum vel. Modi velit illo minus soluta itaque deleniti ab fuga?
-            </p>
+<div class="row room-info">
+<div class="col-6">
+<h2>dewewf</h2>
+</div>
+<div class="col-6">
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, voluptatum?</p>
+</div>
+</div>
+
+
           </div>
 
           <div id="filter" class="p-fixed">
@@ -74,39 +69,130 @@
               <i class="fas fa-search"></i>
             </label>
             <div id="menu" class="row justify-content-center">
-              <div class="col-10">
-                <p>adipisicing elit. Facilis, ducimus aperiam. Porro harum debitis vero totam fugit dolor, temporibus animi
-                  sapiente officiis aliquam nulla deserunt repudiandae. Adipisci obcaecati eius fugit culpa blanditiis molestiae
-                  illum atque cumque, debitis, a quasi similique odit voluptas velit aperiam provident delectus. Earum reiciendis
-                </p>
-              </div>
               <form>
-                <div class="row justify-content-center">
-                  <div class="col-5">
-                    <input type="text" class="form-control" placeholder="First name">
+                <div class="row justify-content-center f-title">
+                  <div class="col-12 pd-10">
+                    <h3>SEARCH</h3>
                   </div>
-                  <div class="col-5">
-                    <input type="text" class="form-control" placeholder="Last name">
+                </div>
+
+                <div class="f-select">
+                  <div class="row justify-content-center mg-b08">
+                    <div class="col-12 pd-10">
+                      <input type="text" class="form-control" placeholder="KEYWORDS">
+                    </div>
                   </div>
-                  <div class="col-5">
-                    <input type="text" class="form-control" placeholder="First name">
+
+                  <div class="row justify-content-center mg-b08">
+                    <div class="col-6 pd-10">
+                      <h4>CHECK IN</h4>
+
+                      <label for="checkIn" class="d-in"></label>
+                      <input type="datetime" id="checkIn" name="checkIn" placeholder="mm/dd/yyyy">
+                    </div>
+                    <div class="col-6 pd-10">
+                      <h4>CHECK OUT</h4>
+                      <label for="checkOut" class="d-in"></label>
+                      <input type="datetime" id="checkOut" name="checkOut" placeholder="mm/dd/yyyy">
+                    </div>
                   </div>
-                  <div class="col-5">
-                    <input type="text" class="form-control" placeholder="Last name">
+
+                  <div class="row justify-content-center mg-b08">
+                    <div class="col-4 pd-10">
+                      <h4>ROOM</h4>
+                      <select class="form-control">
+                        <option>--</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                      </select>
+                    </div>
+                    <div class="col-4 pd-10">
+                      <h4>ADULT</h4>
+                      <select class="form-control">
+                        <option>--</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                      </select>
+                    </div>
+                    <div class="col-4 pd-10">
+                      <h4>CHILD</h4>
+                      <select class="form-control">
+                        <option>--</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                      </select>
+                    </div>
                   </div>
-                  <div class="col-5">
-<label id="Cancel" for="menu-toggle">
-  <i class="fas fa-times"></i>Cancel</label>
+
+                  <div class="row justify-content-center">
+                    <div class="col-12 pd-10">
+                      <h4>PREFERENCES</h4>
+                    </div>
                   </div>
-                  <div class="col-5">
-<label id="Okay" for="menu-toggle">
-  <i class="fas fa-check"></i>Okay</label>
+                  <div class="row justify-content-center">
+                    <div class="col-2 pd-10">
+                      <input type="checkbox" id="f-bath">
+                      <label id="f-bath-bt" for="f-bath">
+                        <i class="fas fa-bath"></i>
+                      </label>
+                    </div>
+
+                    <div class="col-2 pd-10">
+                      <input type="checkbox" id="f-shower">
+                      <label id="f-shower-bt" for="f-shower">
+                        <i class="fas fa-shower"></i>
+                      </label>
+                    </div>
+
+                    <div class="col-2 pd-10">
+                      <input type="checkbox" id="f-tv">
+                      <label id="f-tv-bt" for="f-tv">
+                        <i class="fas fa-tv"></i>
+                      </label>
+                    </div>
+
+                    <div class="col-2 pd-10">
+                      <input type="checkbox" id="f-utensils">
+                      <label id="f-utensils-bt" for="f-utensils">
+                        <i class="fas fa-utensils"></i>
+                      </label>
+                    </div>
+
+                    <div class="col-2 pd-10">
+                      <input type="checkbox" id="f-wifi">
+                      <label id="f-wifi-bt" for="f-wifi">
+                        <i class="fas fa-wifi"></i>
+                      </label>
+                    </div>
+
+                    <div class="col-2 pd-10">
+                      <input type="checkbox" id="f-paw">
+                      <label id="f-paw-bt" for="f-paw">
+                        <i class="fas fa-paw"></i>
+                      </label>
+                    </div>
+
+
+                  </div>
+                </div>
+
+                <div class="row justify-content-center f-bt  pd-10">
+                  <div class="col-12 okay">
+                    <label for="menu-toggle">FILTER</label>
                   </div>
                 </div>
               </form>
             </div>
           </div>
-
 
         </div>
       </div>
@@ -133,7 +219,7 @@
   <!-- search -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      $('input[type="checkbox"]').on('click', function () {
+      $('#menu-toggle').on('click', function () {
         $('#content').toggleClass('hide');
         $('#filter').toggleClass('p-fixed');
         $('#burger')
@@ -144,7 +230,17 @@
     });
   </script>
 
-
+  <!-- date -->
+  <script>
+    $('#checkIn').datepicker({
+      uiLibrary: 'bootstrap4'
+    });
+  </script>
+  <script>
+    $('#checkOut').datepicker({
+      uiLibrary: 'bootstrap4'
+    });
+  </script>
 
 </body>
 
