--- a/No2.filter/content.html
+++ b/No2.filter/content.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body>
+<body class="bd-bg-w">
   <div id="wrap" class="d-flex justify-content-center">
 
     <div class="col-12">
@@ -290,13 +290,13 @@
             </div>
 
             <div class="f-select">
-              <div class="row justify-content-center mg-b08">
+              <div class="row justify-content-center f-gutter">
                 <div class="col-12 pd-10">
                   <input type="text" class="form-control" placeholder="KEYWORDS">
                 </div>
               </div>
 
-              <div class="row justify-content-center mg-b08">
+              <div class="row justify-content-center f-gutter">
                 <div class="col-6 pd-10">
                   <h4>CHECK IN</h4>
 
@@ -310,7 +310,7 @@
                 </div>
               </div>
 
-              <div class="row justify-content-center mg-b08">
+              <div class="row justify-content-center f-gutter">
                 <div class="col-4 pd-10">
                   <h4>ROOM</h4>
                   <select class="form-control">
@@ -351,43 +351,43 @@
                   <h4>PREFERENCES</h4>
                 </div>
               </div>
-              <div class="row justify-content-center">
-                <div class="col-2 pd-10">
+              <div class="row justify-content-center tag-pd-10">
+                <div class="col-2 tag-pd">
                   <input type="checkbox" id="f-bath">
                   <label id="f-bath-bt" for="f-bath">
                     <i class="fas fa-bath"></i>
                   </label>
                 </div>
 
-                <div class="col-2 pd-10">
+                <div class="col-2 tag-pd">
                   <input type="checkbox" id="f-smoking">
                   <label id="f-smoking-bt" for="f-smoking">
                     <i class="fas fa-smoking"></i>
                   </label>
                 </div>
 
-                <div class="col-2 pd-10">
+                <div class="col-2 tag-pd">
                   <input type="checkbox" id="f-tv">
                   <label id="f-tv-bt" for="f-tv">
                     <i class="fas fa-tv"></i>
                   </label>
                 </div>
 
-                <div class="col-2 pd-10">
+                <div class="col-2 tag-pd">
                   <input type="checkbox" id="f-utensils">
                   <label id="f-utensils-bt" for="f-utensils">
                     <i class="fas fa-utensils"></i>
                   </label>
                 </div>
 
-                <div class="col-2 pd-10">
+                <div class="col-2 tag-pd">
                   <input type="checkbox" id="f-wifi">
                   <label id="f-wifi-bt" for="f-wifi">
                     <i class="fas fa-wifi"></i>
                   </label>
                 </div>
 
-                <div class="col-2 pd-10">
+                <div class="col-2 tag-pd">
                   <input type="checkbox" id="f-paw">
                   <label id="f-paw-bt" for="f-paw">
                     <i class="fas fa-paw"></i>
