--- a/No2.filter/index.html
+++ b/No2.filter/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body>
+<body class="bd-bg-o">
   <div id="wrap-all" class="d-flex justify-content-center">
     <div class="col-sm-11 col-md-10">
       <div id="header">
