--- a/No2.filter/index.html
+++ b/No2.filter/index.html
@@ -42,14 +42,16 @@
 <body class="bd-bg-o">
   <div id="wrap-all" class="d-flex justify-content-center">
     <div class="col-sm-11 col-md-10">
+
       <div id="header">
         <a href="index.html">
           <h1>EG's HOTEL</h1>
         </a>
       </div>
 
-      <iframe src="content.html" frameborder="0" scrolling="auto" class="col-12" name="content"></iframe>
-
+      <div id="windows">
+        <iframe src="content.html" frameborder="0" scrolling="auto" class="col-12" name="content"></iframe>
+      </div>
 
       <div id="footer">
         <div id="copyright">
@@ -64,7 +66,6 @@
       </div>
     </div>
   </div>
-
 
 </body>
 
