框架捲軸調整

--- a/No2.filter/index.html
+++ b/No2.filter/index.html
@@ -50,7 +50,7 @@
       </div>
 
       <div id="windows">
-        <iframe src="content.html" frameborder="0" scrolling="auto" class="col-12" name="content"></iframe>
+        <iframe src="content.html" frameborder="0" class="col-12" name="content"></iframe>
       </div>
 
       <div id="footer">
