--- a/No2.filter/index.html
+++ b/No2.filter/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>EG's TheF2E - No2.filter</title>
-  <link rel="shortcut icon" type="image/x-icon" href="img/egg.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="egg.ico">
   <link rel="stylesheet" href="css/reset.css">
 
   <!-- Optional JavaScript -->
