檔案連結修正

--- a/No2.filter/rooms/room01.html
+++ b/No2.filter/rooms/room01.html
@@ -14,7 +14,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
-  <script src="js/bootstrap.js"></script>
+  <script src="../js/bootstrap.js"></script>
 
   <!-- Bootstrap CSS -->
   <link href="../css/bootstrap.css" rel="stylesheet">
@@ -88,7 +88,7 @@
     <a id="back-i" href="../content.html">
       <i class="fas fa-arrow-left"></i>
     </a>
-<div id="back" class="row justify-content-center"></div>
+    <div id="back" class="row justify-content-center"></div>
   </div>
 
   </div>
