--- a/No2.filter/rooms/room01.html
+++ b/No2.filter/rooms/room01.html
@@ -41,7 +41,7 @@
 <body>
   <div id="wrap" class="d-flex justify-content-center">
 
-    <div class="col-12">
+    <div class="col-12 col-sm-10">
       <div id="content" class="row">
 
         <div class="col-12 room-title">
