--- a/No2.filter/rooms/room02.html
+++ b/No2.filter/rooms/room02.html
@@ -14,7 +14,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
-<script src="../js/bootstrap.js"></script>
+  <script src="../js/bootstrap.js"></script>
 
   <!-- Bootstrap CSS -->
   <link href="../css/bootstrap.css" rel="stylesheet">
@@ -41,7 +41,7 @@
 <body>
   <div id="wrap" class="d-flex justify-content-center">
 
-    <div class="col-12">
+    <div class="col-12 col-sm-10">
       <div id="content" class="row">
 
         <div class="col-12 room-title">
