--- a/No3.admin_order/index.html
+++ b/No3.admin_order/index.html
@@ -27,6 +27,10 @@
   <!-- font -->
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
+  <!--charts -->
+  <script src="js/echarts.js"></script>
+  <script src="egshop.js"></script>
+
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -140,7 +144,7 @@
         <div class="col-12">
           <div class="activity info">
             <h2>Activity</h2>
-            <span class="t-green">54,540</span>
+            <div id="chart"></div>
           </div>
         </div>
       </div>
@@ -162,7 +166,7 @@
               <div>
                 <div class="num">45,123</div>
                 <div class="rate t-green align-middle">
-                  <i class="fas fa-arrow-up"></i>87%
+                  <i class="fas fa-caret-up"></i>87%
                 </div>
               </div>
             </div>
@@ -179,7 +183,7 @@
               <div>
                 <div class="num">38,006</div>
                 <div class="rate t-green align-middle">
-                  <i class="fas fa-arrow-up"></i>56%
+                  <i class="fas fa-caret-up"></i>56%
                 </div>
               </div>
             </div>
@@ -196,7 +200,7 @@
               <div>
                 <div class="num">13,110</div>
                 <div class="rate t-red align-middle">
-                  <i class="fas fa-arrow-down"></i>26%
+                  <i class="fas fa-caret-down"></i>26%
                 </div>
               </div>
             </div>
@@ -213,7 +217,7 @@
               <div>
                 <div class="num">18,000</div>
                 <div class="rate t-red align-middle">
-                  <i class="fas fa-arrow-down"></i>36%
+                  <i class="fas fa-caret-down"></i>36%
                 </div>
               </div>
             </div>
@@ -300,22 +304,75 @@
     </div>
 
 
-  <div id="footer">
-    <div id="copyright">
-      <div class="copyright_line">
-        <p>[The F2E - No3.admin order] Designed by Pantomimeg.</p>
+    <div id="footer">
+      <div id="copyright">
+        <div class="copyright_line">
+          <p>[The F2E - No3.admin order] Designed by Pantomimeg.</p>
+        </div>
+        <div class="copyright_lines">
+          <p>[The F2E - No3.admin order]</p>
+          <p>Designed by Pantomimeg.</p>
+        </div>
       </div>
-      <div class="copyright_lines">
-        <p>[The F2E - No3.admin order]</p>
-        <p>Designed by Pantomimeg.</p>
-      </div>
+
     </div>
 
   </div>
 
-  </div>
+  <script type="text/javascript">
+    // 基于准备好的dom，初始化echarts实例
+    var myChart = echarts.init(document.getElementById('chart'), 'egshop');
+
+    // 指定图表的配置项和数据
+    var option = {
+      title: {
+        text: ' '
+      },
+      tooltip: {
+        trigger: 'axis'
+      },
+      legend: {
+        data: ['TOTAL REVENUE', 'TOTAL COST', 'NET INCOME']
+      },
+      grid: {
+        left: '3%',
+        right: '4%',
+        bottom: '3%',
+        containLabel: true
+      },
+      xAxis: {
+        type: 'category',
+        boundaryGap: false,
+        data: ['', '1 JAN', '2 FEB', '3 MAR', '4 APR', '5 MAY', '6 JUN']
+      },
+      yAxis: {
+        type: 'value'
+      },
+      series: [{
+          name: 'TOTAL REVENUE',
+          type: 'line',
+          stack: 'total',
+          data: [1500, 2320, 2010, 1540, 1900, 3300, 4100]
+        },
+        {
+          name: 'TOTAL COST',
+          type: 'line',
+          stack: 'total',
+          data: [1200, 1320, 1010, 1340, 900, 2300, 2100]
+        },
+        {
+          name: 'NET INCOME',
+          type: 'line',
+          stack: 'total',
+          data: [2200, 1820, 1910, 2340, 2900, 3300, 3100]
+        },
+      ]
+    };
 
 
+    // 使用刚指定的配置项和数据显示图表。
+    myChart.setOption(option);
+  </script>
 </body>
 
 </html>
